force-app-modified/main/default/objects/charter_company__c/fields/charter_company_email__c.field-meta.xml
<CustomField>
    <fullName>charter_company_email__c</fullName>
    <label>אי מייל חברת השכרה</label>
    <type>Email</type>
</CustomField>