force-app-modified/main/default/objects/charter_company__c/fields/charter_company_information__c.field-meta.xml
<CustomField>
    <fullName>charter_company_information__c</fullName>
    <description>מידע כללי על חברת ההשכרה</description>
    <label>מידע כללי</label>
    <type>TextArea</type>
</CustomField>