force-app-modified/main/default/objects/charter_company__c/fields/charter_company_location__c.field-meta.xml
<CustomField>
    <fullName>charter_company_location__c</fullName>
    <description>מדינות בהן פעילה חברת ההשכרה</description>
    <label>מדינות בהן היא פעילה</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>יוון</fullName>
            </value>
            <value>
                <fullName>קרואטיה</fullName>
            </value>
            <value>
                <fullName>טורקיה</fullName>
            </value>
            <value>
                <fullName>איטליה</fullName>
            </value>
            <value>
                <fullName>צרפת</fullName>
            </value>
            <value>
                <fullName>אנגליה</fullName>
            </value>
            <value>
                <fullName>תאילנד</fullName>
            </value>
            <value>
                <fullName>סיישל</fullName>
            </value>
            <value>
                <fullName>סלובניה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>