force-app-modified/main/default/objects/charter_company__c/fields/charter_company_phone__c.field-meta.xml
<CustomField>
    <fullName>charter_company_phone__c</fullName>
    <description>מספר טלפון חברת השכרה</description>
    <label>מספר טלפון חברת השכרה</label>
    <type>Phone</type>
</CustomField>