force-app-modified/main/default/objects/charter_company__c/fields/CharterContract__c.field-meta.xml
<CustomField>
    <fullName>CharterContract__c</fullName>
    <label>תקנון חברת השכרה</label>
    <type>Url</type>
</CustomField>